--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ Makefile*
 # QtCtreator CMake
 CMakeLists.txt.user
 
+LibraryManagement/Assets/BookList/BX-Books.csv
+LibraryManagement/Assets/BookList/BookList.xlsx
+LibraryManagement/Assets/BookList/JSON_load.txt
+LibraryManagement/Assets/BookList/BookList_new.csv
