Corrected parse errors when loading master list. Added save files for checked out books, reserved books, and old books. Added secondary load functions for the previously mentioned lists; these will load in the background once a user has logged in. Also added Dialogs for teh manager to view the reserved list, and the checked out list. Still need to add the add and edit dialog boxes for user and books as well as the remove functionality for users and books.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ LibraryManagement/Assets/BookList/BX-Books.csv
 LibraryManagement/Assets/BookList/BookList.xlsx
 LibraryManagement/Assets/BookList/JSON_load.txt
 LibraryManagement/Assets/BookList/BookList_new.csv
+LibraryManagement/Assets/BookList/BookList_new_new.csv
